[package]
name = "repr"
version = "0.0.9"
edition = "2021"
description = "The regular-expression-as-linear-logic interpretation and its implementation"
license = "MIT/Apache-2.0"
keywords = ["regular-expression"]
categories = ["regular-expression"]
homepage = "https://github.com/synthet-ic/repr"
documentation = "https://docs.rs/repr"
rust-version = "1.62.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex-syntax = "0.6"
unconst = { version = "0", features = [] }

aho-corasick = { version = "0.7", optional = true }
# For skipping along search text quickly when a leading byte is known.
memchr = { version = "2.5.0", optional = true }

[features]
default = ["std", "perf-inline", "unicode", "regex-syntax/default"]
std = []
perf-inline = []
quotient = ["aho-corasick", "memchr"]


unicode = [
  "unicode-age",
  "unicode-bool",
  "unicode-case",
  "unicode-gencat",
  "unicode-perl",
  "unicode-script",
  "unicode-segment",
  "regex-syntax/unicode",
]
# Enables use of the `Age` property, e.g., `\p{Age:3.0}`.
unicode-age = ["regex-syntax/unicode-age"]
# Enables use of a smattering of boolean properties, e.g., `\p{Emoji}`.
unicode-bool = ["regex-syntax/unicode-bool"]
# Enables Unicode-aware case insensitive matching, e.g., `(?i)β`.
unicode-case = ["regex-syntax/unicode-case"]
# Enables Unicode general categories, e.g., `\p{Letter}` or `\pL`.
unicode-gencat = ["regex-syntax/unicode-gencat"]
# Enables Unicode-aware Perl classes corresponding to `\w`, `\s` and `\d`.
unicode-perl = ["regex-syntax/unicode-perl"]
# Enables Unicode scripts and script extensions, e.g., `\p{Greek}`.
unicode-script = ["regex-syntax/unicode-script"]
# Enables Unicode segmentation properties, e.g., `\p{gcb=Extend}`.
unicode-segment = ["regex-syntax/unicode-segment"]
